[gd_scene format=3 uid="uid://c12g870fflmgm"]

[ext_resource type="PackedScene" uid="uid://bvdbogspriemp" path="res://interface/components/context_menu/context_menu_base.tscn" id="1_0ew4m"]
[ext_resource type="Script" uid="uid://4d2rvnvo4fyx" path="res://interface/components/context_menu/user_context_menu.gd" id="2_a8kb2"]
[ext_resource type="Texture2D" uid="uid://b4sx6qv0scruf" path="res://icons/textsms.png" id="2_l8waf"]

[node name="ContextMenuBase" unique_id=319957489 instance=ExtResource("1_0ew4m")]
script = ExtResource("2_a8kb2")

[node name="UsernameLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer" parent_id_path=PackedInt32Array(547925685) index="0" unique_id=733914309]
unique_name_in_owner = true
layout_mode = 2
text = "Username"
horizontal_alignment = 1

[node name="PrivateMessageButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer" parent_id_path=PackedInt32Array(547925685) index="1" unique_id=690478661]
unique_name_in_owner = true
layout_mode = 2
text = "Private Message"
icon = ExtResource("2_l8waf")
alignment = 0
expand_icon = true

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PrivateMessageButton" to="." method="_on_private_message_button_pressed"]
